; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event.c_event_mm_malloc_.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event.c_event_mm_malloc_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @event_mm_malloc_(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %14

7:                                                ; preds = %1
  br i1 true, label %8, label %11

8:                                                ; preds = %7
  %9 = load i64, i64* %3, align 8
  %10 = call i8* @mm_malloc_fn_(i64 %9)
  store i8* %10, i8** %2, align 8
  br label %14

11:                                               ; preds = %7
  %12 = load i64, i64* %3, align 8
  %13 = call i8* @malloc(i64 %12)
  store i8* %13, i8** %2, align 8
  br label %14

14:                                               ; preds = %11, %8, %6
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}

declare dso_local i8* @mm_malloc_fn_(i64) #1

declare dso_local i8* @malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
